@@ -1,7 +1,7 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 0.0-32
-Date: 2016-05-30
+Version: 0.0-33
+Date: 2016-09-12
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
 Description: Some very simple infrastructure for basis functions.
